Bug 1603354 - Treat empty ruby base/text container as if there is an empty inline element inside. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D61078

--HG--
extra : moz-landing-system : lando